# Trayc

./: .gitignore  CMakeLists.txt  COPYING.txt  HowToBuild.txt  Notes.txt  README.txt  TODO.txt  TODO_ENGINE.txt
BallPhysics/: Ball.cpp  Ball.h  BallPhysics.cpp  BallPhysics.h  BallRenderer.cpp  BallRenderer.h  CMakeLists.txt  Main.cpp  README.txt  Settings.ini  SimulationHandler.cpp  SimulationHandler.h  TODO.txt  WireCube.cpp  WireCube.h
BallPhysics/Shaders/: PointSpheres.frag  PointSpheres.vert  WireBox.frag  WireBox.vert
BallPhysics/Solvers/: PhysicsSolver.cpp  PhysicsSolver.h  SlowSolver.cpp  SlowSolver.h  UniformGrid.cpp  UniformGrid.h  UniformGridSolver.cpp  UniformGridSolver.h  VectorFields.h
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  SimpleShader.frag  SimpleShader.vert  TODO.txt  TODO_ENGINE.txt
Engine/Common/: Common.h  MathFunctions.h  Settings.h  Utilities.cpp  Utilities.h
Engine/Core/: Camera.cpp  Camera.h  CameraHandler.cpp  CameraHandler.h  ContextHandler.cpp  ContextHandler.h  Core.h  DefaultCameraHandler.cpp  DefaultCameraHandler.h  Defines.h  EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  InputHandler.cpp  InputHandler.h  InputObserver.cpp  InputObserver.h  RotationalCameraHandler.cpp  RotationalCameraHandler.h  SDLHandler.cpp  SDLHandler.h  Updateable.cpp  Updateable.h  UpdateableHandler.cpp  UpdateableHandler.h
Engine/Engine/: AssetLoader.cpp  AssetLoader.h  BackBufferRenderPass.cpp  BackBufferRenderPass.h  Component.cpp  Component.h  DebugDraw.cpp  DebugDraw.h  Entity.cpp  Entity.h  ForwardRenderPass.cpp  ForwardRenderPass.h  Game.cpp  Game.h  GeometryRenderPass.cpp  GeometryRenderPass.h  GlobalRenderingParams.cpp  GlobalRenderingParams.h  Light.cpp  Light.h  LightRenderPass.cpp  LightRenderPass.h  RayTraceRenderPass.cpp  RayTraceRenderPass.h  RenderPass.cpp  RenderPass.h  Renderable.cpp  Renderable.h  RenderableObject3D.cpp  RenderableObject3D.h  Renderer.cpp  Renderer.h  RenderingContext.cpp  RenderingContext.h  Scene.cpp  Scene.h  ShadowProjectionRenderPass.cpp  ShadowProjectionRenderPass.h  ShadowRenderPass.cpp  ShadowRenderPass.h  (+4 more)
Engine/GL/: BufferObject.cpp  BufferObject.h  CubemapTexture.cpp  CubemapTexture.h  FragmentShader.cpp  FragmentShader.h  FrameBuffer.cpp  FrameBuffer.h  GLUtils.h  GeometryShader.cpp  GeometryShader.h  Program.cpp  Program.h  Renderer.h  ScreenBuffer.cpp  ScreenBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureSampler.cpp  TextureSampler.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexArrayInstanced.cpp  VertexArrayInstanced.h  VertexAttributeDef.cpp  VertexAttributeDef.h  VertexBufferObject.cpp  VertexBufferObject.h  VertexShader.cpp  VertexShader.h
Engine/Geometry/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  Geometry.h  GeometryMeshes.cpp  GeometryMeshes.h  IndexContainer.cpp  IndexContainer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  Plane.cpp  Plane.h  Ray.h  RayTracePrimitives.cpp  RayTracePrimitives.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  TriangleMesh.cpp  TriangleMesh.h  VertexAttribute.cpp  VertexAttribute.h  VertexAttributeArray.cpp  VertexAttributeArray.h
Engine/Resources/: Settings.json
Engine/Shaders/: NormalShader.frag  NormalShader.geom  NormalShader.vert  Simple.vert
Engine/Utils/: BSpline.cpp  BSpline.h  ErrorCheck.cpp  ErrorCheck.h  FPSCounter.cpp  FPSCounter.h  InitialSettings.cpp  InitialSettings.h  MathFunctions.cpp  MathFunctions.h  NormalDrawer.cpp  NormalDrawer.h  Profiler.cpp  Profiler.h  Setting.h  Singleton.h  StlExtensions.h  StlExtensions.hpp  TextureEffects.cpp  TextureEffects.h  TimerQuery.cpp  TimerQuery.h  UniformBuffers.cpp  UniformBuffers.h  Utilities.cpp  Utilities.h  VectorZip.hpp  ViewRayDataUB.cpp  ViewRayDataUB.h
EngineTester/: CMakeLists.txt  DebugView.cpp  DebugView.h  GUI.cpp  GUI.h  GUIView.cpp  GUIView.h  HeadDemo.cpp  HeadDemo.h  LightHandler.cpp  LightHandler.h  Main.cpp  PBRDemo.cpp  PBRDemo.h  PBRMaterialDemo.cpp  PBRMaterialDemo.h  ShadowsDemo.cpp  ShadowsDemo.h  SponzaDemo.cpp  SponzaDemo.h  TODO.txt
FunctionDrawer/: CMakeLists.txt  Function.txt  FunctionDrawer.cpp  FunctionDrawer.h  FunctionRasterizer.cpp  FunctionRasterizer.h  FunctionTracer.cpp  FunctionTracer.h  GUIHandler.cpp  GUIHandler.h  Main.cpp  README.txt  Settings.ini  TODO.txt  TmpHandlers.h  TwoVariableFunction.cpp  TwoVariableFunction.h  UserSettings.cpp  UserSettings.h
FunctionDrawer/Shaders/: Simple.frag  Simple.vert  tracing.frag  tracing.vert
GameBlocks/: CMakeLists.txt  Main.cpp
HeaderLibs/: test.cpp
Mandelbrot/: CMakeLists.txt  Main.cpp  MandelbrotRenderer.cpp  MandelbrotRenderer.h  README.txt
Mandelbrot/Shaders/: mandelbrot.frag  mandelbrot.vert  mandelbrotD.frag  mandelbrotF.frag
RTRTGame/: Animation.cpp  Animation.h  CMakeLists.txt  CONTROLS.txt  GUIView.cpp  GUIView.h  Main.cpp  RTRTEditor.cpp  RTRTEditor.h  RTRTGame.cpp  RTRTGame.h  RTRTGamelike.cpp  RTRTGamelike.h  RTRTLevel.cpp  RTRTLevel.h  RTRTObjects.cpp  RTRTObjects.h  TODO.txt
Tester/: Box.cpp  Box.h  CMakeLists.txt  LabMaterials.cpp  LabMaterials.h  Labyrinth.cpp  Labyrinth.h  README.txt  Settings.ini  Tester.cpp  TweakBarHandler.cpp  TweakBarHandler.h
Tester/CUDAfiles/: box.cu  rectangleAA.cu  shaders.cu
Trayc/: BufferDrawer.cpp  BufferDrawer.h  CMakeLists.txt  Entity.cpp  Entity.h  Environment.cpp  Environment.h  GameEngine.cpp  GameEngine.h  Macros.h  OptixTracer.cpp  OptixTracer.h  Player.cpp  Player.h  Programs.cpp  Programs.h  SafeOptix.h  SceneGraph.cpp  SceneGraph.h  TODO.txt  Utils.cpp  Utils.h
Trayc/CUDAfiles/: box.cu  common.h  context_shaders.cu  helper.h  light.cu  lights.h  material_shaders.cu  phong.h  random.h  rectangleAA.cu  sphere.cu  triangle_mesh.cu
Trayc/Handlers/: AccelHandler.cpp  AccelHandler.h  MaterialHandler.cpp  MaterialHandler.h  OptixTextureHandler.cpp  OptixTextureHandler.h  ProgramHandler.cpp  ProgramHandler.h  SceneGraphHandler.cpp  SceneGraphHandler.h
Trayc/Shaders/: fxaa.frag  passthrough.frag  passthrough.vert
(+62 files in other folders)
